# mpc_local_planner

mpc_local_planner/: CMakeLists.txt  mpc_local_planner_plugin.xml  package.xml
mpc_local_planner/include/mpc_local_planner/: controller.h  mpc_config.h  mpc_local_planner_ros.h
mpc_local_planner/include/mpc_local_planner/systems/: base_robot_se2.h  kinematic_bicycle_model.h  robot_dynamics_interface.h  simple_car.h  unicycle_robot.h
mpc_local_planner/include/mpc_local_planner/utils/: conversion.h  publisher.h
mpc_local_planner/src/: controller.cpp  mpc_config.cpp  mpc_local_planner_ros.cpp  test_mpc_optim_node.cpp
mpc_local_planner/src/utils/: conversion.cpp  publisher.cpp
mpc_local_planner_examples/: CMakeLists.txt  package.xml
mpc_local_planner_msgs/: CMakeLists.txt  package.xml
