<?xml version="1.0"?>
<package format="2">
  <name>mpc_local_planner</name>
  <version>0.0.3</version>
  <description>The mpc_local_planner package implements a plugin
    to the base_local_planner of the 2D navigation stack.
    It provides a generic and versatile model predictive control implementation
    with minimum-time and quadratic-form receding-horizon configurations.
  </description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/mpc_local_planner</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>teb_local_planner</build_depend>

  <depend>control_box_rst</depend>

  <depend>builtin_interfaces</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_2d_utils</depend>
  <depend>costmap_converter</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_msgs</depend>
  <depend>mpc_local_planner_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>p90902_controller_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/mpc_local_planner_plugin.xml"/>
  </export>

</package>
