<?xml version="1.0"?>
<package format="2">
  <name>mpc_local_planner_examples</name>
  <version>0.0.3</version>
  <description>The mpc_local_planner_examples package</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mpc_local_planner_examples</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mpc_local_planner</exec_depend>
  <exec_depend>mpc_local_planner_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
